# picomz-80k

./: 8253.c  8255.c  CMakeLists.txt  LICENSE  README.md  cassette.c  keyboard.c  keyboard700.c  miscfuncs.c  pca9536.c  picomz.c  picomz.h  picomz700.c  sharpcorp.c  sharpcorp700.c  tusb_config.h  vgadisplay.c  vgadisplay700.c
documentation/: PicoMZ tuning benchmark.ods  PicoMZ-80K.odt
fatfs/: LICENSE  ffconf.h
sdcard/: sdcard.c  sdcard.cmake  sdcard.h
zazu80/: CMakeLists.txt  z80.c
